--- a/vercel.json
+++ b/vercel.json
@@ -1,28 +1,12 @@
-
 {
-  "version": 2,
-  "builds": [
-    {
-      "src": "syso/wsgi.py",
-      "use": "@vercel/python",
-      "config": { "maxLambdaSize": "15mb", "runtime": "python3.9" }
-    },
-    {
-      "src": "build_files.sh",
-      "use": "@vercel/static-build",
-      "config": {
-        "distDir": "ui/staticfiles"
-      }
-    }
-  ],
-  "routes": [
-    {
-      "src": "/static/(.*)",
-      "dest": "/static/$1"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "syso/wsgi.py"
-    }
-  ]
+    "builds": [
+        {
+            "src": "syso/wsgi.py",
+            "use": "@vercel/python",
+            "config": { "maxLambdaSize":"15mb","runtime":"python3.9" }
+        }
+    ],
+    "routes": [
+        { "src": "/(.*)", "dest": "syso/wsgi.py" }
+    ]
 }
